# lera

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: parquet_dataloader.py
lera/: __init__.py  __version__.py
lera/model/: __init__.py  model.py  moe.py  rope.py  standard_model.py  transformer.py
prototyping/addition-test/: add_model.ipynb  autoregressive_baseline.ipynb  latent_tool_calling.ipynb  moe_load_balancing.ipynb
prototyping/conv-test/: digit_embeddings.ipynb
tokenizer/: __init__.py  _deprecated_tokenizer.py  tokenizer  tokenizer.ipynb  tokenizer.json
train/: __init__.py  prototype_train.py  standard_train.py  utils.py
